--- a/apps/ws-server/package.json
+++ b/apps/ws-server/package.json
@@ -9,11 +9,14 @@
     "dev": "pnpm run build && pnpm run start"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
+    "jsonwebtoken": "^9.0.3",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "@types/ws": "^8.18.1"
+    "@types/ws": "^8.18.1",
+    "@repo/backend-common": "workspace:*"
   },
   "keywords": [],
   "author": "",
