--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -14,6 +14,12 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3"
   },
+  "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "@repo/backend-common": "workspace:*"
+  },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/express": "^5.0.6"
