--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -12,13 +12,9 @@
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.10",
     "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.3"
-  },
-  "dependencies": {
-    "@types/jsonwebtoken": "^9.0.10",
-    "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "@repo/backend-common": "workspace:*"
+    "@repo/backend-common": "workspace:*",
+    "@repo/common": "workspace:*"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
