--- a/apps/ws-server/package.json
+++ b/apps/ws-server/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.10",
+    "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.3",
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@repo/backend-common": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/ws": "^8.18.1",
-    "@repo/backend-common": "workspace:*"
+    "@repo/db": "workspace:*"
   },
   "keywords": [],
   "author": "",
